[tool.poetry]
name = "DESops"
version = "20.6.1a4"
description = ""
authors = ["Jack Weitze <jweitze@umich.edu>", "Romulo Meira Goes <r.meiragoes@gmail.com>", "Shoma Matsui <smatsui@umich.edu>"]
packages = [
    { include = "DESops" },
]

[tool.poetry.dependencies]
python = "^3.8"
python-igraph = "^0.8.0"
pydash = "^4.7.6"
requests = "^2.24.0"
dd = "^0.5.5"
tqdm = "^4.46.1"
colorama = {version = "^0.4.3", platform = "windows"}
pycairo = "1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
seed-isort-config = "^2.1.0"
pre-commit = "^2.2.0"
rope = "^0.17.0"
autoflake = "^1.3.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
caching=["pycairo"]
